public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/103/source/compile
source.c: In function ‘main’:
source.c:8:2: error: expected ‘;’ before ‘printf’
  printf("%.2f\n", (9*celc)/5);
  ^
